--- a/style.css
+++ b/style.css
@@ -1053,6 +1053,9 @@ header {
     color: #fff; }
   header .search-container ::placeholder {
     color: #fff; }
+  header .collapse {
+    min-width: 300px;
+    display: flex; }
   @media (max-width: 61.24em) {
     header .searchform {
       display: none; } }
@@ -1366,6 +1369,20 @@ header {
     background-color: rgba(34, 34, 34, 0.6);
     z-index: 1;
     position: absolute; }
+    .slick-slide .overlay-slide .readmore {
+      width: 30%;
+      margin: 0 auto;
+      background-color: rgba(0, 0, 0, 0.4); }
+      .slick-slide .overlay-slide .readmore p {
+        color: #fff;
+        margin: 0; }
+      .slick-slide .overlay-slide .readmore a {
+        color: #32a0a7; }
+    .slick-slide .overlay-slide .item-text {
+      margin: 0 auto;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%); }
 
 .slick-dots {
   bottom: -5px; }
@@ -1403,9 +1420,11 @@ li.slick-active button {
   color: #fff; }
   .overlay-slide > .item-text a {
     display: block; }
-  .overlay-slide > .item-text h5 {
-    font-size: 20px;
-    height: 25px; }
+  .overlay-slide > .item-text h2 {
+    font-size: 60px;
+    margin-bottom: 15px; }
+  .overlay-slide > .item-text h2, .overlay-slide > .item-text .brighter > a {
+    color: #fff !important; }
 
 /* misc styles */
 body {
